--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
     "postcss": "8.4.27",
-    "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "prisma": "^5.2.0"
   }
 }
